--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="151dp"
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
-        app:srcCompat="@drawable/calculator" />
+        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/etFirstValue"
@@ -81,7 +81,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:backgroundTint="#E7FF9800" />
+        app:backgroundTint="#EFB811" />
 
     <Button
         android:id="@+id/btMultiply"
@@ -95,7 +95,7 @@
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:backgroundTint="#E7FF9800" />
+        app:backgroundTint="#0288D1" />
 
     <Button
         android:id="@+id/btDivide"
@@ -109,6 +109,6 @@
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:backgroundTint="#E7FF9800" />
+        app:backgroundTint="#129818" />
 
 </LinearLayout>
